--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	    <div class="theme-bg-shapes-left"></div>
 	    <div class="container">
 		    <h1 class="page-heading single-col-max mx-auto">doozer</h1>
-		    <div class="page-intro single-col-max mx-auto">Everything you need to get your e2e tests finally automated.</div>
+		    <div class="page-intro single-col-max mx-auto">Everything you need to get your e2e tests automated.</div>
 		    <div class="main-search-box pt-3 d-block mx-auto">
                  <form class="search-form w-100">
 		            <input type="text" placeholder="Search the docs..." name="search" class="form-control search-input">
@@ -61,8 +61,6 @@
     </div><!--//page-header-->
    <div class="page-content">
 	    <div class="container">
-			<!-- Google Search - temporary -->
-			<div class="gcse-search"></div>
 		    <div class="docs-overview py-5">
 			    <div class="row justify-content-center">
 				    <div class="col-12 col-lg-4 py-3">
@@ -104,7 +102,7 @@
 								    <span class="theme-icon-holder card-icon-holder me-2">
 								        <i class="fas fa-box fa-fw"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">APIs</span>
+							        <span class="card-title-text">Documentation</span>
 							    </h5>
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
@@ -120,7 +118,7 @@
 								    <span class="theme-icon-holder card-icon-holder me-2">
 								        <i class="fas fa-cogs fa-fw"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Integrations</span>
+							        <span class="card-title-text">Get Started</span>
 							    </h5>
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
@@ -136,60 +134,12 @@
 								    <span class="theme-icon-holder card-icon-holder me-2">
 								        <i class="fas fa-tools"></i>
 							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Utilities</span>
+							        <span class="card-title-text">Codelabs</span>
 							    </h5>
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
 								</div>
 							    <a class="card-link-mask" href="docs-page.html#section-5"></a>
-						    </div><!--//card-body-->
-					    </div><!--//card-->
-				    </div><!--//col-->
-				    <div class="col-12 col-lg-4 py-3">
-					    <div class="card shadow-sm">
-						    <div class="card-body">
-							    <h5 class="card-title mb-3">
-								    <span class="theme-icon-holder card-icon-holder me-2">
-								        <i class="fas fa-laptop-code"></i>
-							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Web</span>
-							    </h5>
-							    <div class="card-text">
-								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
-								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-6"></a>
-						    </div><!--//card-body-->
-					    </div><!--//card-->
-				    </div><!--//col-->
-				    <div class="col-12 col-lg-4 py-3">
-					    <div class="card shadow-sm">
-						    <div class="card-body">
-							    <h5 class="card-title mb-3">
-								    <span class="theme-icon-holder card-icon-holder me-2">
-								        <i class="fas fa-tablet-alt"></i>
-							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Mobile</span>
-							    </h5>
-							    <div class="card-text">
-								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
-								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-7"></a>
-						    </div><!--//card-body-->
-					    </div><!--//card-->
-				    </div><!--//col-->
-				    <div class="col-12 col-lg-4 py-3">
-					    <div class="card shadow-sm">
-						    <div class="card-body">
-							    <h5 class="card-title mb-3">
-								    <span class="theme-icon-holder card-icon-holder me-2">
-								        <i class="fas fa-book-reader"></i>
-							        </span><!--//card-icon-holder-->
-							        <span class="card-title-text">Resources</span>
-							    </h5>
-							    <div class="card-text">
-								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
-								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-8"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -205,7 +155,7 @@
 							    <div class="card-text">
 								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
 								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-9"></a>
+							    <a class="card-link-mask" href="docs-page.html#section-6"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
