new> card's text + new page for codelabs

--- a/index.html
+++ b/index.html
@@ -48,13 +48,7 @@
 	    <div class="theme-bg-shapes-left"></div>
 	    <div class="container">
 		    <h1 class="page-heading single-col-max mx-auto">doozer</h1>
-		    <div class="page-intro single-col-max mx-auto">Everything you need to get your e2e tests automated.</div>
-		    <div class="main-search-box pt-3 d-block mx-auto">
-                 <form class="search-form w-100">
-		            <input type="text" placeholder="Search the docs..." name="search" class="form-control search-input">
-		            <button type="submit" class="btn search-btn" value="Search"><i class="fas fa-search"></i></button>
-		        </form>
-             </div>
+		    <div class="page-intro single-col-max mx-auto">Everything you need to get your e2e tests automated</div>
 	    </div>
     </div><!--//page-header-->
    <div class="page-content">
@@ -71,7 +65,7 @@
 							        <span class="card-title-text">Introduction</span>
 							    </h5>
 							    <div class="card-text">
-								    Section overview goes here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+								    <i>doozer</i> brings fast UI test automation that is easy to set up and learn, and does not require advanced coding skills.
 							    </div>
 							    <a class="card-link-mask" href="docs-page.html#section-1"></a>
 						    </div><!--//card-body-->
@@ -87,7 +81,7 @@
 							        <span class="card-title-text">Installation</span>
 							    </h5>
 							    <div class="card-text">
-								    Section overview goes here. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
+								    It is distributed as Maven dependency so you'll need Java and Maven (or you can clone its github repo) before you start.
 							    </div>
 							    <a class="card-link-mask" href="docs-page.html#section-2"></a>
 						    </div><!--//card-body-->
@@ -103,7 +97,7 @@
 							        <span class="card-title-text">Get Started</span>
 							    </h5>
 							    <div class="card-text">
-								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
+								    With Java and Maven in place you can start working on you first doozer test script. First create an empty Maven project (cont)			    
 								</div>
 							    <a class="card-link-mask" href="docs-page.html#section-3"></a>
 						    </div><!--//card-body-->
@@ -119,7 +113,7 @@
 							        <span class="card-title-text">Codelabs</span>
 							    </h5>
 							    <div class="card-text">
-								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
+								    In this section you can find a set of step-by-step examples on how to create / run / debug and update a doozer test script.						    
 								</div>
 							    <a class="card-link-mask" href="docs-page.html#section-4"></a>
 						    </div><!--//card-body-->
@@ -135,7 +129,7 @@
 							        <span class="card-title-text">Documentation</span>
 							    </h5>
 							    <div class="card-text">
-								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
+								    All the details on supported actions, UI selectors, extensions and helpers.						    
 								</div>
 							    <a class="card-link-mask" href="docs-page.html#section-5"></a>
 						    </div><!--//card-body-->
@@ -151,7 +145,7 @@
 							        <span class="card-title-text">FAQs</span>
 							    </h5>
 							    <div class="card-text">
-								    Section overview goes here. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.						    
+								    All the: 'How can I ...?', 'Is ... supported?' etc. 
 								</div>
 							    <a class="card-link-mask" href="docs-page.html#section-6"></a>
 						    </div><!--//card-body-->
