--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	    <div class="theme-bg-shapes-left"></div>
 	    <div class="container">
 		    <h1 class="page-heading single-col-max mx-auto">doozer</h1>
-		    <div class="page-intro single-col-max mx-auto">Everything you need to get your e2e tests automated</div>
+		    <div class="page-intro single-col-max mx-auto">Everything you need to get your manual e2e tests automated</div>
 	    </div>
     </div><!--//page-header-->
    <div class="page-content">
