--- a/docs-page.html
+++ b/docs-page.html
@@ -77,13 +77,17 @@
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-2">Writing first script</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-3">Running first script</a></li>
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-4"><span class="theme-icon-holder me-2"><i class="fas fa-cogs"></i></span>Codelabs</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-1">Section Item 4.1</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-2">Section Item 4.2</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-3">Section Item 4.3</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-1">Test suite</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-2">Golden screenshots</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-3">Failures investigation</a></li>
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-5"><span class="theme-icon-holder me-2"><i class="fas fa-tools"></i></span>Documentation</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-5-1">Actions</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-5-2">Driver setup</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-5-3">Custom Actions</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-5-4">Configuration flags</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-5-5">Running the tests</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-5-6">Golden images</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-5-7">Test execution logs</a></li>
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-6"><span class="theme-icon-holder me-2"><i class="fas fa-laptop-code"></i></span>FAQs</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-6-1">Section Item 6.1</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-6-2">Section Item 6.2</a></li>
