doc> add faq section

--- a/docs-page.html
+++ b/docs-page.html
@@ -85,6 +85,7 @@
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-5-5">Running the tests</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-5-6">Golden images</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-5-7">Test execution logs</a></li>
+					<li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-6"><span class="theme-icon-holder me-2"><i class="fas fa-lightbulb"></i></span>FAQs</a></li>
 			    </ul>
 
 		    </nav><!--//docs-nav-->
