docs> rename the test pages

--- a/test-pages/webform.html
+++ b/test-pages/webform.html
@@ -28,7 +28,7 @@
     <h1>Doozer</h1>
     <h3>Web form example</h3>
 
-    <form action="./thankyou.html">
+    <form action="./hello.html">
         <label>Name:
             <input type="text" name="name">
         </label>
