--- a/test-pages/hello.html
+++ b/test-pages/hello.html
@@ -25,7 +25,7 @@
 <body>
 
 <div class="container">
-    <h2>Hello <span id="name"></span>!</h2>
+    <h2 id="message">Hello <span id="name"></span>!</h2>
 </div>
 
 <script>
