new> add favicon to under-construction page

--- a/under-construction.html
+++ b/under-construction.html
@@ -2,6 +2,7 @@
 <html lang="en"> 
 <head>
     <title>doozerDocs - Documentation page for the doozer project</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     
     <!-- Meta -->
     <meta charset="utf-8">
