--- a/docs-page.html
+++ b/docs-page.html
@@ -179,6 +179,17 @@
 					<section class="docs-section" id="item-2-2">
 						<h2 class="section-heading">Maven dependency</h2>
 						<p>.</p>
+						<div class="docs-code-block">
+							<pre class="shadow-lg rounded">
+								<code class="language-xml">
+	&lt;dependency&gt;
+		&lt;groupId&gt;dev.softtest&lt;/groupId&gt;
+		&lt;artifactId&gt;doozer&lt;/artifactId&gt;
+		&lt;version&gt;0.2.3&lt;/version&gt;
+	&lt;/dependency&gt;</code>
+							</pre>
+							<a href="#" class="btn btn-light">Copy to clipboard</a>
+						</div><!--//docs-code-block-->
 					</section><!--//section-->
 					
 			    </article><!--//docs-article-->
@@ -218,6 +229,7 @@
 	<span class="action">click</span> <span class="selector">selector:</span>”SL({button ‘submit’})
 	<span class="action">assertInnerTest</span> <span class="selector">selector:</span>”By.classname(‘greeting’)” <span class="args">args:</span>”Hello Doozer!”</code>
 							</pre>
+							<a href="#" class="btn btn-light">Copy to clipboard</a>
 						</div><!--//docs-code-block-->
 						
 					</section><!--//section-->
