new> add doozer logo

--- a/under-construction.html
+++ b/under-construction.html
@@ -3,6 +3,7 @@
 <head>
     <title>doozerDocs - Documentation page for the doozer project</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="canonical" href="https://doozer.softtest.dev" />
     
     <!-- Meta -->
     <meta charset="utf-8">
@@ -56,7 +57,7 @@
         text-align: right; 
         font-size: 20px; 
         border-radius: 15px; 
-        width: 70%; 
+        width: 90%; 
       }
     </style>
 </head>
@@ -66,7 +67,7 @@
     <div class="branding docs-branding">
       <div class="container-fluid position-relative py-2">
         <div class="docs-logo-wrapper">
-          <div class="site-logo"><a class="navbar-brand" href="index.html"><img class="logo-icon me-2" src="assets/images/coderdocs-logo.svg" alt="logo"><span class="logo-text">doozer<span class="text-alt">Docs</span></span></a></div>    
+          <div class="site-logo"><a class="navbar-brand" href="index.html"><img class="logo-icon me-2" src="assets/images/doozer-logo.svg" alt="logo"><span class="logo-text">doozer<span class="text-alt">Docs</span></span></a></div>    
         </div><!--//docs-logo-wrapper-->
         <div class="docs-top-utilities d-flex justify-content-end align-items-center">
 
