--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en"> 
 <head>
     <title>doozerDocs - Documentation page for the doozer project</title>
+	<link rel="canonical" href="https://doozer.softtest.dev" />
     
     <!-- Meta -->
     <meta charset="utf-8">
