--- a/docs-page.html
+++ b/docs-page.html
@@ -89,6 +89,7 @@
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-5-6">Golden images</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-5-7">Test execution logs</a></li>
 					<li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-6"><span class="theme-icon-holder me-2"><i class="fas fa-lightbulb"></i></span>FAQs</a></li>
+					<li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-7"><span class="theme-icon-holder me-2"><i class="fas fa-info-circle"></i></span>About</a></li>
 			    </ul>
 
 		    </nav><!--//docs-nav-->
@@ -317,6 +318,15 @@
 					    <h1 class="docs-heading">FAQs</h1>
 					    <section class="docs-intro">
 						    <p>All the: 'How can I ...?', 'Is ... supported?' etc.</p>
+						</section><!--//docs-intro-->
+				    </header>
+			    </article><!--//docs-article-->
+
+				<article class="docs-article" id="section-7">
+				    <header class="docs-header">
+					    <h1 class="docs-heading">About</h1>
+					    <section class="docs-intro">
+						    <p>.</p>
 						</section><!--//docs-intro-->
 				    </header>
 			    </article><!--//docs-article-->
