doc> adding target audience

--- a/docs-page.html
+++ b/docs-page.html
@@ -111,7 +111,16 @@
 					
 					<section class="docs-section" id="item-1-2">
 						<h2 class="section-heading">Target audience</h2>
-						<p>.</p>
+						<p><strong class="me-1">Doozer</strong> was built primarily for <strong class="me-1">Testers</strong> / <strong class="me-1">Test Engineers</strong>
+							which would like to automate their work but struggle with coding principles - industry refers to them/us as
+							<strong class="me-1">Manual Testers</strong> / <strong class="me-1">QAs</strong>.
+							The framework removes most of the technicalities and leaves a User with a simple script language that can be used for a quick and
+							efficient translation of existing manual test cases into automated world.</p>
+						<p>If you are comfortable with <a class="theme-link" href="https://selenium.dev">Selenium Webdriver</a>,
+							<a class="theme-link" href="https://www.cypress.io/">Cypress</a>, <a class="theme-link" href="https://playwright.dev/">Playwright</a>
+							or <a class="theme-link" href="https://webdriver.io/">Webdriver.io</a> then doozer is, most
+							probably, not for you. It does not give you as much control as the others and quite fast you might feel limited. Nonetheless, if
+							you find your testing code too complex or you are lacking a simple way to do diff-based UI testing then feel free to give it a shoot.</p>
 					</section><!--//section-->
 					
 					<section class="docs-section" id="item-1-3">
