docs> what is doozer?

--- a/docs-page.html
+++ b/docs-page.html
@@ -106,7 +106,12 @@
 
 				    <section class="docs-section" id="item-1-1">
 						<h2 class="section-heading">What is doozer?</h2>
-						<p>. </p>
+						<h5>Dead simple UI testing framework.</h5>
+						<p><strong class="me-1">Doozer</strong> is a UI testing framework built by Testers for Testers. It removes the complexity
+							of writing complex testing code, with classes, page objects etc and lets you easily transform existing manual test scripts
+							into automated tests. It is meant to bring the same test automation experience across all the major platforms so that You
+							and Your team can focus on more important aspects of your work. 
+						</p>
 					</section><!--//section-->
 					
 					<section class="docs-section" id="item-1-2">
