--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 	
 					<ul class="social-list list-inline mx-md-3 mx-lg-5 mb-0 d-none d-lg-flex">
 						<li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li>
-			            <li class="list-inline-item"><a id="xlink" href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
+			            <li class="list-inline-item"><a class="xlink" href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
 		                <li class="list-inline-item"><a href="#"><i class="fab fa-product-hunt fa-fw"></i></a></li>
-						<li class="list-inline-item"><a id="mlink" href="#"><i class="fas fa-contact-card fa-fw"></i></a></li>
+						<li class="list-inline-item"><a class="mlink" href="#"><i class="fas fa-contact-card fa-fw"></i></a></li>
 		            </ul><!--//social-list-->
 	            </div><!--//docs-top-utilities-->
             </div><!--//container-->
@@ -171,9 +171,9 @@
 		    
 		    <ul class="social-list list-unstyled pb-4 mb-0">
 			    <li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li> 
-	            <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
+	            <li class="list-inline-item"><a class="xlink" href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
 	            <li class="list-inline-item"><a href="#"><i class="fab fa-product-hunt fa-fw"></i></a></li>
-				<li class="list-inline-item"><a href="#"><i class="fas fa-contact-card fa-fw"></i></a></li>
+				<li class="list-inline-item"><a class="mlink" href="#"><i class="fas fa-contact-card fa-fw"></i></a></li>
 	        </ul><!--//social-list-->
 	        
 	        <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
@@ -200,12 +200,16 @@
 	<script>
 		var who = "info";
 		var where = "softtest.dev";
-		var elink = document.getElementById("mlink");
-		elink.href = `mailto:${who}@${where}`;
+		var mlinks = document.getElementsByClassName("mlink");
+		for (var mlink in mlinks) {
+			mlinks[mlink].href = `mailto:${who}@${where}`;
+		}
 		var xwho = "softtest_dev";
 		var xwhere = "https://x.com/";
-		var xlink = document.getElementById("xlink");
-		xlink.href = `${xwhere}${xwho}`;
+		var xlinks = document.getElementsByClassName("xlink");
+		for (var xlink in xlinks) {
+			xlinks[xlink].href = `${xwhere}${xwho}`;
+		}
 	</script>
 
 </body>
