--- a/under-construction.html
+++ b/under-construction.html
@@ -33,10 +33,15 @@
         width: 100%;
         height: 90%;
       }
-      .uc-box {
+      .uc-logo {
         border: 2px dotted grey;
         border-radius: 25px;
-        margin: 240px auto;
+        margin: 40px auto;
+        padding: 20px 240px;
+        text-align: center;
+      }
+      .uc-box {
+        margin: 40px auto;
         padding: 20px 240px;
         text-align: center;
       }
@@ -84,6 +89,7 @@
 
   <div class="page-content">
     <div class="uc-container">
+      <div class="uc-box"><img src="assets/images/doozer-logo.png" alt="logo"></div>
       <div class="uc-box">
         <span class="uc-span">doozer</span>
         <div class="uc-progressbar"> 
