docs> list of supported selector types

--- a/docs-page.html
+++ b/docs-page.html
@@ -347,7 +347,13 @@
 			
 					<section class="docs-section" id="item-5-2">
 						<h2 class="section-heading">Selectors</h2>
-						<p>.</p>
+						<p>
+							<ul>
+								<li>By. - By selectors</li>
+								<li>Sl. - Semantic locators</li>
+								<li>"" - empty selector, for actions that don't use it</li>
+							</ul>
+						</p>
 					</section><!--//section-->
 
 					<section class="docs-section" id="item-5-3">
